cmake_minimum_required(VERSION 3.12)
project(EngineSim)
set(CMAKE_CXX_STANDARD 20)
set(EXTERNAL_LIB_HEADERS EngineSim/HydraulicNetwork EngineSim/SimpleSolve)
find_package(Eigen3 3.3 REQUIRED NO_MODULE)
add_compile_options(-Wall -Wextra -pedantic -Wmissing-include-dirs -Wformat=2 -Wunused -Wcast-align)
# this can only be applied to C++ sources
set(CMAKE_CXX_FLAGS "-Wnon-virtual-dtor -Woverloaded-virtual")
if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
    message("No build type specified, defaulting to Debug (no optimizations, include debug symbols), use -DCMAKE_BUILD_TYPE=RelWithDebInfo or =Release to build a release)")
endif()
enable_testing()
add_subdirectory(SimpleSolve)
add_subdirectory(HydraulicNetwork)
add_executable(EngineSim main.cpp HydraulicNetwork/HydraulicNetLib/src/NetworkSolve.cpp)
target_include_directories(EngineSim PRIVATE ${EXTERNAL_LIB_HEADERS})
target_link_libraries(EngineSim LINK_PUBLIC SimpleSolve Eigen3::Eigen)
